compil.err
Lecture des listes de paquets…
Construction de l'arbre des dépendances…
Lecture des informations d'état…
libglfw3-dev est déjà la version la plus récente (3.3.10-1build1).
libglew-dev est déjà la version la plus récente (2.2.0-4build1).
0 mis à jour, 0 nouvellement installés, 0 à enlever et 1 non mis à jour.
-- The CXX compiler identification is GNU 13.3.0
-- Detecting CXX compiler ABI info
-- Detecting CXX compiler ABI info - done
-- Check for working CXX compiler: /usr/bin/c++ - skipped
-- Detecting CXX compile features
-- Detecting CXX compile features - done
-- Found OpenMP_CXX: -fopenmp (found version "4.5") 
-- Found OpenMP: TRUE (found version "4.5")  
-- Found GLEW: /usr/include (found version "2.2.0") 
CMake Warning (dev) at /usr/share/cmake-3.28/Modules/FindOpenGL.cmake:381 (message):
  Policy CMP0072 is not set: FindOpenGL prefers GLVND by default when
  available.  Run "cmake --help-policy CMP0072" for policy details.  Use the
  cmake_policy command to set the policy and suppress this warning.

  FindOpenGL found both a legacy GL library:

    OPENGL_gl_LIBRARY: /usr/lib/x86_64-linux-gnu/libGL.so

  and GLVND libraries for OpenGL and GLX:

    OPENGL_opengl_LIBRARY: /usr/lib/x86_64-linux-gnu/libOpenGL.so
    OPENGL_glx_LIBRARY: /usr/lib/x86_64-linux-gnu/libGLX.so

  OpenGL_GL_PREFERENCE has not been set to "GLVND" or "LEGACY", so for
  compatibility with CMake 3.10 and below the legacy GL library will be used.
Call Stack (most recent call first):
  CMakeLists.txt:22 (find_package)
This warning is for project developers.  Use -Wno-dev to suppress it.

-- Found OpenGL: /usr/lib/x86_64-linux-gnu/libOpenGL.so   
-- YGL Configuration:
--   C++ Standard: 17
--   OpenMP: -fopenmp
--   GLEW Found: TRUE
--   GLFW3 Found: 1
--   OpenGL Found: TRUE
--   GLEW Include: /usr/include
--   GLFW3 Include: 
--   OpenGL Include: 
-- Configuring done (0.7s)
-- Generating done (0.0s)
-- Build files have been written to: /home/yannoo/Dev/YGL/build
[  2%] Building CXX object CMakeFiles/ygl.dir/src/core/light.cpp.o
[  5%] Building CXX object CMakeFiles/ygl.dir/src/core/camera.cpp.o
[  8%] Building CXX object CMakeFiles/ygl.dir/src/core/bounding_box.cpp.o
[ 11%] Building CXX object CMakeFiles/ygl.dir/src/core/mesh.cpp.o
[ 13%] Building CXX object CMakeFiles/ygl.dir/src/core/object3d.cpp.o
[ 16%] Building CXX object CMakeFiles/ygl.dir/src/core/scene.cpp.o
[ 19%] Building CXX object CMakeFiles/ygl.dir/src/loaders/loader.cpp.o
[ 22%] Building CXX object CMakeFiles/ygl.dir/src/loaders/md2_loader.cpp.o
/home/yannoo/Dev/YGL/src/core/scene.cpp: In member function ‘void ygl::Scene::renderScene(const ygl::Camera&)’:
/home/yannoo/Dev/YGL/src/core/scene.cpp:29:39: warning: unused parameter ‘camera’ [-Wunused-parameter]
   29 | void Scene::renderScene(const Camera& camera) {
      |                         ~~~~~~~~~~~~~~^~~~~~
[ 25%] Building CXX object CMakeFiles/ygl.dir/src/loaders/md3_loader.cpp.o
[ 27%] Building CXX object CMakeFiles/ygl.dir/src/loaders/md5_loader.cpp.o
[ 30%] Building CXX object CMakeFiles/ygl.dir/src/loaders/obj_loader.cpp.o
[ 33%] Building CXX object CMakeFiles/ygl.dir/src/materials/material.cpp.o
[ 36%] Building CXX object CMakeFiles/ygl.dir/src/materials/texture.cpp.o
[ 38%] Building CXX object CMakeFiles/ygl.dir/src/math/mat4.cpp.o
[ 41%] Building CXX object CMakeFiles/ygl.dir/src/math/quat.cpp.o
In file included from /home/yannoo/Dev/YGL/src/materials/texture.cpp:1:
/home/yannoo/Dev/YGL/include/materials/texture.hpp: In constructor ‘ygl::Texture::Texture(Type, const std::string&)’:
/home/yannoo/Dev/YGL/include/materials/texture.hpp:87:17: warning: ‘ygl::Texture::m_name’ will be initialized after [-Wreorder]
   87 |     std::string m_name;
      |                 ^~~~~~
/home/yannoo/Dev/YGL/include/materials/texture.hpp:82:18: warning:   ‘unsigned int ygl::Texture::m_id’ [-Wreorder]
   82 |     unsigned int m_id = 0;
      |                  ^~~~
/home/yannoo/Dev/YGL/src/materials/texture.cpp:9:1: warning:   when initialized here [-Wreorder]
    9 | Texture::Texture(Type type, const std::string& name)
      | ^~~~~~~
/home/yannoo/Dev/YGL/src/materials/texture.cpp: In member function ‘bool ygl::Texture::create(int, int, Format)’:
/home/yannoo/Dev/YGL/src/materials/texture.cpp:77:21: error: ‘GL_TEXTURE_2’ was not declared in this scope; did you mean ‘GL_TEXTURE2’?
   77 |     glTexParameteri(GL_TEXTURE_2
      |                     ^~~~~~~~~~~~
      |                     GL_TEXTURE2
/home/yannoo/Dev/YGL/src/materials/texture.cpp:77:33: error: expected ‘}’ at end of input
   77 |     glTexParameteri(GL_TEXTURE_2
      |                                 ^
/home/yannoo/Dev/YGL/src/materials/texture.cpp:68:60: note: to match this ‘{’
   68 | bool Texture::create(int width, int height, Format format) {
      |                                                            ^
/home/yannoo/Dev/YGL/src/materials/texture.cpp:77:33: warning: no return statement in function returning non-void [-Wreturn-type]
   77 |     glTexParameteri(GL_TEXTURE_2
      |                                 ^
/home/yannoo/Dev/YGL/src/materials/texture.cpp: At global scope:
/home/yannoo/Dev/YGL/src/materials/texture.cpp:77:33: error: expected ‘}’ at end of input
/home/yannoo/Dev/YGL/src/materials/texture.cpp:7:15: note: to match this ‘{’
    7 | namespace ygl {
      |               ^
gmake[2]: *** [CMakeFiles/ygl.dir/build.make:244 : CMakeFiles/ygl.dir/src/materials/texture.cpp.o] Erreur 1
gmake[2]: *** Attente des tâches non terminées....
gmake[1]: *** [CMakeFiles/Makefile2:89 : CMakeFiles/ygl.dir/all] Erreur 2
gmake: *** [Makefile:91 : all] Erreur 2
